<?xml version="1.0"?>
<package format="2">
  <name>prometheus_slam</name>
  <version>0.0.1</version>
  <description>Multi robot collaborative dense slam</description>

  <maintainer email="senselab2022@gmail.com">SenseLab</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>voxblox</depend>
  <depend>voxblox_ros</depend>
  <depend>cblox</depend>
  <depend>cblox_ros</depend>
  <depend>ceres_catkin</depend>
  <depend>eigen_catkin</depend>
  <depend>voxblox_msgs</depend>
  <depend>cblox_msgs</depend>
  <depend>voxgraph_msgs</depend>
  <depend>voxgraph</depend>
  <depend>prometheus_slam_msgs</depend>
  <depend>node_evaluator</depend>

</package>
