<?xml version="1.0"?>
<package format="2">
        <name>prometheus_slam_mod</name>
        <version>0.0.0</version>
        <description>Simulation package of prometheus_slam.</description>
        <maintainer email="senselab2022@gmail.com">SenseLab</maintainer>
        <license>BSD</license>

        <buildtool_depend>catkin</buildtool_depend>
        <buildtool_depend>catkin_simple</buildtool_depend>

        <depend>roscpp</depend>
        <depend>prometheus_slam_msgs</depend>
        <depend>eigen_catkin</depend>
        <depend>cblox_msgs</depend>
        <depend>tf</depend>
        <depend>tf2</depend>
        <depend>tf2_geometry_msgs</depend>
        <depend>glog_catkin</depend>
</package>
